# cubix-data-engineer-capstone

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyproject_bup_during_week7_toml.tom_  pyproject_pro.toml
.github/workflows/: deploy.yaml
cubix_data_engineer_capstone/: create_catalogs.ipynb  upload_latest_whl.ps1
cubix_data_engineer_capstone/etl/bronze/: extract_and_load_file.py  extract_and_load_file_later.py
cubix_data_engineer_capstone/etl/gold/: daily_sales_metrics.py  wide_sales.py
cubix_data_engineer_capstone/etl/silver/: calendar.py  customer.py  customers.py  customers_original_problematic.py  product_category.py  product_subcategory.py  product_subcategory_original_problematic.py  products.py  products_original_problematic.py  sales.py  sales_original_problematic.py
cubix_data_engineer_capstone/utils/: config.py  databricks.py  datalake.py  datalake_old.py  datalake_readfile.py  datalake_writefile.py
tests/: conftest.py
tests/etl/gold/: test_daily_sales_metrics.py  test_wide_sales.py
tests/etl/silver/: test_calendar.py  test_customers.py  test_product_category.py  test_product_subcategory.py  test_products.py  test_sales.py
