[project]
name = "cubix-data-engineer-capstone"
version = "0.2.4"
description = ""
authors = [
    {name = "SZABGAB",email = "gabor.szabo@allianz.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^4.0.0" # local: "^3.5.2" or max: "^3.5.4"
numpy = "^1"
pytest = "^9.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pyarrow = "^19.0.0"
pre-commit = "^4.5.1"
pandas = "^2.3.3"

[tool.pytest.ini_options]
texpaths = ["./tests"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--disable-warnings -p no:warnings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"